[package]
name = "cosmos-cli"
version = "0.1.0"
authors = ["Steve Degosserie <723552+stiiifff@users.noreply.github.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
itertools = "0.12.1"
log = "0.4.21"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.2", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }

[profile.release]
lto = true
panic = 'abort'
