[package]
name = "cosmos-cli"
description = "A simple CLI tool to get information about resources in the Cosmos network."
license = "Apache-2.0"
authors = ["Steve Degosserie <723552+stiiifff@users.noreply.github.com>"]
readme = "README.md"
documentation = "https://github.com/stiiifff/cosmos-cli/blob/master/README.md#available-subcommands"
repository = "https://github.com/stiiifff/cosmos-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
base64 = "0.22.0"
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
itertools = "0.12.1"
json_to_table = "0.7.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }

[profile.release]
lto = true
panic = 'abort'
